# c-basic

./: .gitignore  CMakeLists.txt  b10-songs.c  b11-gen.c  b11-kichban.txt  b11-order.c  bin.txt  vd1-1.c  vd1-2.c  vd1-3.c  vd1-4.c  vd1-5-r.c  vd1-5-w.c  vd2-1.c  vd2-2.c  vd2-3.c  vd2-4.c  vd2-5.c  vd2-6.c  vd2-7.c  vd5-1-s1-doctep.c  vd5-1-s2-OOP-Sll.c  vd5-1-s2-dll.c  vd5-1-s2-sll.c  vd5-1-s2-songs.c  vd5-2-s1-input.c  vd5-2-s2-stack.c  vd5-3-queue-decl.c  vd6-1.c  vd6-2.c  vd7-1.c  vd7-2.c  vd7-3.c  vd7-bench-main.c  vd7-lisa-main.c  vd7-lisa.h  vd7-rbm-bench.c  vd7-rbm-main.c  vd7-rbm-src.c  vd7-rbm.h  (+4 more)
baitap/: b7-is-bns.c  b7-lca.c  b7-parse-arri.c  b7-xdist.c  b8-1-gen.c  baitap5-1-plan.txt  baitap6-1.c  baitap6-3-plan.c  baitap7.h  baitap7.txt  songs.txt  vidu5-1-dll-i.c  vidu5-1-doctep.c  vidu5-1-songlist.c  vidu5-2-docdulieu.c  vidu5-2-plan.txt  vidu5-2-stack-d.c  vidu5-3-queue-ij.c
bkc/: CMakeLists.txt  README.md  bin.txt  double_linked_list.c  double_linked_list.h
bkc/tests/: CMakeLists.txt
bkc/tests/base/: utils.h
bkc/tests/double_linked_list/: CMakeLists.txt  dll_generic_apis.c  dll_int_apis.c  helper.h
docker/: Dockerfile  README.txt
text/: lisa_all_text.txt
