project(c-basic C)
add_subdirectory(cgen)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/cgen)
add_executable(vd1-1 vd1-1.c)
add_executable(vd1-2 vd1-2.c)
add_executable(vd1-3 vd1-3.c)
add_executable(vd1-4 vd1-4.c)
add_executable(vd1-5-r vd1-5-r.c)
add_executable(vd1-5-w vd1-5-w.c)
add_executable(vd2-1 vd2-1.c)
add_executable(vd2-2 vd2-2.c)
add_executable(vd2-3 vd2-3.c)
add_executable(vd2-4 vd2-4.c)
add_executable(vd2-5 vd2-5.c)
add_executable(vd2-6 vd2-6.c)
add_executable(vd2-7 vd2-7.c)
add_executable(vd5-1-s1 vd5-1-s1-doctep.c)
add_executable(vd5-1-s2-dll vd5-1-s2-dll.c)
add_executable(vd5-1-s2-OOP-Sll vd5-1-s2-OOP-Sll.c)
add_executable(vd5-1-s2-sll vd5-1-s2-sll.c)
add_executable(vd5-1-s2-songs vd5-1-s2-songs.c)
add_executable(vd5-2-s1-input vd5-2-s1-input.c)
add_executable(vd5-2-s2-stack vd5-2-s2-stack.c)
add_executable(vd5-3-queue-decl vd5-3-queue-decl.c)
add_executable(vd6-1 vd6-1.c)
add_executable(vd6-2 vd6-2.c)
add_executable(vd7-1 vd7-1.c)
add_executable(vd7-2 vd7-2.c)
add_executable(vd7-3 vd7-3.c)
add_executable(vd7-rbm vd7-lisa-main.c vd7-src-rbm.c)
add_executable(vd7-bench-rbm vd7-bench-main.c vd7-src-rbm.c)
add_executable(vd7-hmap vd7-lisa-main.c vd7-src-hmap.c)
add_executable(vd7-bench-hmap vd7-bench-main.c vd7-src-hmap.c)
add_executable(vd8-1 vd8-1.c)
add_executable(vd8-2 vd8-2.c)

foreach (p vd5-1-s2-dll vd5-1-s2-OOP-Sll
           vd5-1-s2-sll vd5-1-s2-songs
           vd5-2-s2-stack vd6-2 vd7-2
           vd7-rbm vd7-bench-rbm vd7-hmap vd7-bench-hmap
           vd8-1 vd8-2)
  target_link_libraries(${p} bkc)
endforeach ()